# typescript/src/models/DatasetDeletionType.ts
@@ -1,0 +1,38 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Geo Engine Pro API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.8.0
+ * Contact: dev@geoengine.de
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+/**
+ * 
+ * @export
+ */
+export const DatasetDeletionType = {
+    DeleteRecordAndData: 'DeleteRecordAndData',
+    DeleteData: 'DeleteData'
+} as const;
+export type DatasetDeletionType = typeof DatasetDeletionType[keyof typeof DatasetDeletionType];
+
+
+export function DatasetDeletionTypeFromJSON(json: any): DatasetDeletionType {
+    return DatasetDeletionTypeFromJSONTyped(json, false);
+}
+
+export function DatasetDeletionTypeFromJSONTyped(json: any, ignoreDiscriminator: boolean): DatasetDeletionType {
+    return json as DatasetDeletionType;
+}
+
+export function DatasetDeletionTypeToJSON(value?: DatasetDeletionType | null): any {
+    return value as any;
+}
+
