# typescript/src/models/ExpirationWithType.ts
@@ -1,0 +1,101 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Geo Engine Pro API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.8.0
+ * Contact: dev@geoengine.de
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import type { DatasetDeletionType } from './DatasetDeletionType';
+import {
+    DatasetDeletionTypeFromJSON,
+    DatasetDeletionTypeFromJSONTyped,
+    DatasetDeletionTypeToJSON,
+} from './DatasetDeletionType';
+
+/**
+ * 
+ * @export
+ * @interface ExpirationWithType
+ */
+export interface ExpirationWithType {
+    /**
+     * 
+     * @type {Date}
+     * @memberof ExpirationWithType
+     */
+    deletionTimestamp?: Date | null;
+    /**
+     * 
+     * @type {DatasetDeletionType}
+     * @memberof ExpirationWithType
+     */
+    deletionType: DatasetDeletionType;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExpirationWithType
+     */
+    type: ExpirationWithTypeTypeEnum;
+}
+
+
+/**
+ * @export
+ */
+export const ExpirationWithTypeTypeEnum = {
+    SetExpire: 'setExpire',
+    UnsetExpire: 'unsetExpire'
+} as const;
+export type ExpirationWithTypeTypeEnum = typeof ExpirationWithTypeTypeEnum[keyof typeof ExpirationWithTypeTypeEnum];
+
+
+/**
+ * Check if a given object implements the ExpirationWithType interface.
+ */
+export function instanceOfExpirationWithType(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "deletionType" in value;
+    isInstance = isInstance && "type" in value;
+
+    return isInstance;
+}
+
+export function ExpirationWithTypeFromJSON(json: any): ExpirationWithType {
+    return ExpirationWithTypeFromJSONTyped(json, false);
+}
+
+export function ExpirationWithTypeFromJSONTyped(json: any, ignoreDiscriminator: boolean): ExpirationWithType {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'deletionTimestamp': !exists(json, 'deletionTimestamp') ? undefined : (json['deletionTimestamp'] === null ? null : new Date(json['deletionTimestamp'])),
+        'deletionType': DatasetDeletionTypeFromJSON(json['deletionType']),
+        'type': json['type'],
+    };
+}
+
+export function ExpirationWithTypeToJSON(value?: ExpirationWithType | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'deletionTimestamp': value.deletionTimestamp === undefined ? undefined : (value.deletionTimestamp === null ? null : value.deletionTimestamp.toISOString()),
+        'deletionType': DatasetDeletionTypeToJSON(value.deletionType),
+        'type': value.type,
+    };
+}
+
